# clickorm

./: ARCHITECTURE.md  README.md  pyproject.toml
clickorm/: __init__.py  connection.py  types.py
clickorm/exceptions/: __init__.py
clickorm/models/: __init__.py  base.py  column.py  fields.py  query.py  relationships.py
clickorm/utils/: __init__.py
docs/: relationships.md
examples/: agentops_traces.py  basic_usage.py
tests/: test_connection.py  test_models.py  test_query.py  test_relationships_fixed.py
