[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clickorm"
version = "0.1.0"
description = "Python ORM framework for ClickHouse with Pydantic integration"
readme = "README.md"
authors = [
    {name = "AgentOps AI", email = "info@agentops.ai"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "clickhouse-driver>=0.2.0",
]

[project.urls]
"Homepage" = "https://github.com/AgentOps-AI/clickorm"
"Bug Tracker" = "https://github.com/AgentOps-AI/clickorm/issues"

[tool.setuptools]
packages = ["clickorm"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
